2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Online localized help from Sun's translation team
	in de, es, fr, it, ja, ko, sv, zh_CN, zh_HK and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Remove the old sgml docs and weird assed
	directory structure. We're much simpler these days.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (multiload_change_background_cb):
	Removed bogus return.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (multiload_change_background_cb):
	Added function to handle panel background
	changes.

	(multiload_applet_new): Add signal handler
	to change_background.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>
	
	* properties.c (multiload_properties_cb):
	Stupid bug fix.

	Disconnected the destroy signal it gets handled
	within properties_close_cb where we're also able to NULLify
	the prop_dialog entry.

	and a few small cleanups here and there.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* global.h:
	Add a prop_dialog entry to the MultiloadApplet
	struct.

	* main.c (multiload_applet_new): Set prop_dialog
	to NULL.

	(multiload_destroy_cb): Destroy prop_dialog
	if it's present.

	* properties.c (multiload_properties_cb):
	Use the dialog from the instance struct
	so it doesn't get shared between instances.

	Check if the dialog is there, if so present
	and set the right screen.

	* properties.h: Removed some unused extern
	vars that weren't actually there anymore.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (about_cb): Set the screen right if the user
	requests the about dialog and it's already there but
	not on the right screen.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* main.c (start_procman):
	Moved from egg_screen_execute_command_line_async to
	gdk_spawn_command_line_on_screen.

	Fixes bug #135158.

2004-02-19  Kevin Vandersloot
	
	* linux-proc.c: BSD support. Patch from some unknown BSD hacker. Fixes bug
	#97003
