@@ -1,3 +1,10 @@
+2004-07-29  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* load-graph.c: (load_graph_unalloc), (load_graph_destroy),
+	(load_graph_new):
+	* properties.c: (add_color_selector): Plug leaks. Closes
+	bug #148710.
+
 2004-03-15  Glynn Foster  <glynn.foster@sun.com>
 
 	* docs/*: Online localized help from Sun's translation team
